# ai-dynamic-game

./: .gitignore  Cargo.toml  pyproject.toml  readme.md  test.py
examples/: compare_agg_types.rs  create_scenario.rs  solve_invest_scenario.rs
python/dynapai/: __init__.py  plots.py
src/: cost_func.rs  csf.rs  disaster_cost.rs  lib.rs  main.rs  payoff_func.rs  plots.rs  prod_func.rs  pybindings.rs  reward_func.rs  risk_func.rs  scenarios.rs  solve.rs  states.rs  strategies.rs  utils.rs
