[package]
name = "ai-dynamic-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dynapai"
crate-type = ["cdylib", "lib"]

[dependencies]
argmin-math = "0.2.1"
argmin = "0.7.0"
numpy = "0.17"
ndarray-rand = "0.14.0"
rayon = "1.5.3"

[dependencies.pyo3]
version = "0.17.1"
features = ["extension-module"]

[profile.release]
debug = true
